--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ author :
   twitter : nil
   feedburner : nil
 
+url: https://jaypalexa.github.io
 baseurl: /baseballink
 production_url : https://jaypalexa.github.io/baseballink/
 # favicon: /favicon.ico
