--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,9 @@ author :
   twitter : nil
   feedburner : nil
 
-url: https://jaypalexa.github.io
-baseurl: /baseballink
+url: http://www.baseballink.com
+# url: https://jaypalexa.github.io
+# baseurl: /baseballink
 # production_url : https://jaypalexa.github.io/baseballink/
 # favicon: /favicon.ico
 # theme: minima
