--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author :
   twitter : nil
   feedburner : nil
 
-url: http://www.baseballink.com
+url: https://www.baseballink.com
 # url: https://jaypalexa.github.io
 # baseurl: /baseballink
 # production_url : https://jaypalexa.github.io/baseballink/
